# ros-manager

./: .gitignore  Cargo.toml  README.md
config/: settings.toml
src/: WorkspaceHandler.rs  config.rs  main.rs  settings.toml  terminalhandler.rs  workspacehandler.rs
ui/: appwindow.slint  listbox.slint  menu.slint  skin.slint
