[package]
name = "ros-manager"
version = "0.1.0"
authors = ["Frederik Mazur Andersen <crowdedhd@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.2"

[build-dependencies]
slint-build = "0.2"
